--- a/Final c sharp project/Final c sharp project/Final c sharp project.csproj
+++ b/Final c sharp project/Final c sharp project/Final c sharp project.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>Engine_Final_Project</RootNamespace>
+    <RootNamespace>Final_c_sharp_project</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
